<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pointcloud_compressor</name>
  <version>0.0.0</version>
  <description>Point cloud compression</description>
  <maintainer email="k.koide@aist.go.jp">k.koide</maintainer>
  <license>TBD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>glim</depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
